Fix spacing in new header

--- a/source/stylesheets/revvedup.css
+++ b/source/stylesheets/revvedup.css
@@ -71,7 +71,7 @@ h4 {
   height: 48px;
   width: 988px;
   padding: 0px 6px;
-  margin: 8px auto;
+  margin: 8px auto 6px;
 }
 
   #masthead #home-anchor {
